--- a/website/newsletter/259/index.mdx
+++ b/website/newsletter/259/index.mdx
@@ -1,9 +1,8 @@
 ---
 slug: /259
-title: "This Week In React #259: ..."
+title: "This Week In React #259: State of React, Promise subclasses, Next.js, RSC, JSX Tools, React Grab, Base UI, Waku, StyleX | Yoga CSS Grid, Radon, Brownfield, Detox, Bootsplash | TC39, Browserslist, Linters, Prisma"
 authors: [slorber]
 date: 11-19-2025
-unlisted: true
 ---
 
 Hi everyone, [Seb](https://x.com/sebastienlorber) here\! 👋
