--- a/website/newsletter/260/index.mdx
+++ b/website/newsletter/260/index.mdx
@@ -26,9 +26,9 @@ import Support from "../_support.mdx";
 
 How do you set up i18n in Next.js so it feels built-in — not bolted on? In [learn.next-intl.dev](https://learn.next-intl.dev/?discountCode=TWIRCZMG), Jan Amann (maintainer of next-intl) distills years of hard-won lessons into practical patterns you can apply today:
 
-*   🌍 **I18n ≠ translations** — Understand the pieces that make a truly localized experience
-*   **🧩Architecture that scales** — Routing, locales, time zones & currencies done right
-*   **🚀The full picture** — Backend, CMS, SEO, dev tooling, AI translations & more
+- 🌍 **I18n ≠ translations** — Understand the pieces that make a truly localized experience
+- **🧩Architecture that scales** — Routing, locales, time zones & currencies done right
+- **🚀The full picture** — Backend, CMS, SEO, dev tooling, AI translations & more
 
 [Now 25% off](https://learn.next-intl.dev/?discountCode=TWIRCZMG) exclusively for This Week In React subscribers!
 
@@ -62,6 +62,8 @@ Frustrated with janky data grids that break down at scale, dictate your architec
 ## 📱 React-Native {#react-native}
 
 <Todo />
+
+- 💸 [Shipping to the Meta Horizon Store with React Native? See Callstack's release guide, then jump into Meta’s dev competition](https://www.callstack.com/blog/how-to-release-a-react-native-app-on-the-meta-horizon-store?utm_campaign=meta&utm_source=TWIR&utm_medium=email&utm_content=how-to-release-a-react-native-app-on-the-meta-horizon-store)
 
 ---
 
