--- a/website/newsletter/260/index.mdx
+++ b/website/newsletter/260/index.mdx
@@ -30,7 +30,7 @@ How do you set up i18n in Next.js so it feels built-in — not bolted on? In [le
 - **🧩Architecture that scales** — Routing, locales, time zones & currencies done right
 - **🚀The full picture** — Backend, CMS, SEO, dev tooling, AI translations & more
 
-[Now 25% off](https://learn.next-intl.dev/?discountCode=TWIRCZMG) exclusively for This Week In React subscribers!
+[Now 40% off](https://learn.next-intl.dev/?discountCode=TWIRCZMG) during the Black Friday week!
 
 ---
 
