--- a/website/newsletter/260/index.mdx
+++ b/website/newsletter/260/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /260
-title: "This Week In React #260: ..."
+title: "This Week In React #260: TanStack, HTML streaming, React 19 Actions, Redux Toolkit, Rescript 12, Streamdown, XState Store | Vercel v0, Worklets, Skia, Tailwind, Native Stack, Gifted Chat, Enriched | TC39, Playwright, Bun, Astro, Better Auth"
 authors: [tboba, kacperkapusciak]
 date: 11-26-2025
 unlisted: true
