--- a/website/newsletter/260/index.mdx
+++ b/website/newsletter/260/index.mdx
@@ -6,7 +6,7 @@ date: 11-26-2025
 unlisted: true
 ---
 
-Hi everyone! Kacper and Tymek from **[Software Mansion](https://swmansion.com/?utm_source=thisweekinreact)** here! 👋
+Hi everyone! **Kacper and Tymek from [Software Mansion](https://swmansion.com/?utm_source=thisweekinreact)** here! 👋
 
 This week, TanStack Pacer debuts in Beta, a new framework-agnostic library for controlling function timing with a dedicated React adapter. Lots of interesting articles featuring a 20,000x improvement in TanStack Router route matching algorithm speed, tips to speeding up Next.js on Kubernetes, and tutorial for React 19 Actions for better component responsiveness.
 
